# triomino-lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: Doxygen.cmake  FindCoverage.cmake
docs/: Doxyfile.in
examples/: CMakeLists.txt  grid.c
src/: TriominoConfig.cmake.in  placement.c  placement.h  set-iterator.c  set-iterator.h  set-iterator.inc  set.c  set.h  set.inc  set_iterator.c  set_iterator.h  set_iterator.inc  tadjacencyfinder.c  tadjacencyfinder.h  tcompatibility.c  tcompatibility.h  tconstants.h  tgrid.c  tgrid.h  tmem.c  tmem.h  tplacement.c  tplacement.h  trand.c  trand.h  triomino-cell.c  triomino-cell.h  triomino-constants.h  triomino-grid.c  triomino-grid.h  triomino-pos.c  triomino-pos.h  triomino-slot.c  triomino-slot.h  triomino-tile.c  triomino-tile.h  triomino-types.h  triomino-utils.c  triomino-utils.h  triomino.c  (+9 more)
tests/: CMakeLists.txt  set.inc  set_iterator.inc  test-cell.c  test-compatible.c  test-config.h  test-copy-clone.c  test-create-destroy-default.c  test-create-destroy.c  test-file-error-read.c  test-file-error-write.c  test-file.c  test-getters.c  test-grid.c  test-grid_create_full.c  test-init-finish.c  test-plcmt-struct.c  test-plcmt_create.c  test-pos.c  test-pos_create_full.c  test-set.c  test-set_add.c  test-set_contains.c  test-set_create.c  test-set_create_node.c  test-set_destroy.c  test-set_empty.c  test-set_iterator-full.c  test-set_iterator.c  test-set_iterator_create.c  test-set_iterator_destroy.c  test-set_remove.c  test-set_size.c  test-tile.c  test-tile_create_full.c  test-to-string.c  test.h  triomino-tile.inc
tests/set/: test-set.c  test-set_add.c  test-set_add_set.c  test-set_contains.c  test-set_create.c  test-set_create_node.c  test-set_destroy.c  test-set_empty.c  test-set_filter.c  test-set_iterator-full.c  test-set_iterator.c  test-set_iterator_create.c  test-set_iterator_destroy.c  test-set_merge.c  test-set_pop_random.c  test-set_remove.c  test-set_size.c
tests/t_grid/: test-t_grid_commit_placement.c  test-t_grid_create-destroy.c  test-t_grid_fill_placement.c  test-t_grid_getters.c
tests/t_placement/: test-t_placement_compatibles.c  test-t_placement_cpy.c  test-t_placement_create-destroy.c  test-t_placement_getters.c  test-t_placement_setters.c  test-t_placement_to_string.c
tests/triomino/: test-combination.c  test-compatible.c  test-copy-clone.c  test-create-destroy-default.c  test-create-destroy.c  test-file-error-read.c  test-file-error-write.c  test-file.c  test-getters.c  test-init-finish.c  test-to-string.c  test-value.c
tests/triomino-slot/: test-slot.c  test-slot_create_full.c  test-slot_destroy.c  test-slot_get_.c
tests/triomino-tile/: test-tile.c  test-tile_create_full.c  test-tile_destroy.c  test_tile_get_.c
